@@ -2,6 +2,7 @@ module Spec
   module Story
     class Step
       PARAM_PATTERN = /(\$\w*)/
+      PARAM_OR_GROUP_PATTERN = /(\$\w*)|\(.*?\)/
       
       attr_reader :name
       def initialize(name, &block)
@@ -12,14 +13,21 @@ module Spec
 
       def perform(instance, *args)
         instance.extend(@mod)
-        instance.__send__(@name, *args)
+        instance.__send__(sanitize(@name), *args)
       end
 
       def init_module(name, &block)
+        sanitized_name = sanitize(name)
         @mod = Module.new do
-          define_method(name.to_s, &block)
+          define_method(sanitized_name, &block)
         end
       end
+      
+      def sanitize(a_string_or_regexp)
+        return a_string_or_regexp.source if Regexp == a_string_or_regexp
+        a_string_or_regexp.to_s
+      end
+      
 
       def matches?(name)
         !(matches = name.match(@expression)).nil?
